--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "nodemon": "^1.17.5"
   },
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "express": "^4.16.4",
+    "mongoose": "^5.3.13",
     "morgan": "^1.9.0"
   },
   "repository": {
