add to readme, installed additional packages to package.json

--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.3",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "mongoose": "^5.3.14",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pug": "^2.0.3"
   },
   "repository": {
     "type": "git",
